# todo_fastapi

./: .dockerignore  README.md  compose.yaml  database.py  dockerfile  entrypoint.sh  fly.toml  pyproject.toml  security.py  settings.py
.github/workflows/: pipeline.yaml
main/: app.py
migrations/: env.py
migrations/versions/: 1c473d6761d3_create_users_table.py  275542000b38_create_users_table.py  2b5d6fab67e1_create_users_table.py  352c26e7797a_create_users_table_with_server_defaults.py  7e878a0f49f4_initial_schema.py  b9a68260355b_create_todos_column_in_users_table.py  d2f2e0f5542b_att_tabela_users.py  f2c877a7a6f0_add_created_at_and_updated_at.py
models/: models_db.py
routers/: auth.py  users.py
schema/: schemas.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_user.py
todo_fastapi/: database.py  security.py  settings.py
todo_fastapi/main/: app.py
todo_fastapi/models/: models_db.py
todo_fastapi/routers/: auth.py  todo.py  users.py
todo_fastapi/schema/: schemas.py
todo_fastapi/tests/: conftest.py  test_auth.py  test_db.py  test_todo.py  test_user.py
