[project]
name = "todo_fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.17.2",
    "fastapi[standard]>=0.124.4,<0.125.0",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlalchemy[asyncio]>=2.0.45",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "freezegun>=1.5.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.9",
    "taskipy>=1.14.1",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint = 'ruff check .'
format_imp = 'ruff check --fix'
format = 'ruff format && ruff check --fix'
run = 'fastapi dev main/app.py'
run_net = 'fastapi dev main/app.py --host 0.0.0.0'
pre_test = 'task format && task format_imp'
test = 'pytest -s -x --cov=. -vv'
post_test = 'coverage html'
brute_test = 'pytest -s -x --cov=. -vv' 

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
